--- a/stream/inputs/examples/workload/resnet_time.yaml
+++ b/stream/inputs/examples/workload/resnet_time.yaml
@@ -3,11 +3,11 @@
   equation: O[b][t][k][oy][ox]+=W[k][c][fy][fx]*I[b][t][c][iy][ix]
   dimension_relations: [ix=1*ox+1*fx, iy=1*oy+1*fy]
   loop_dims: [B, T, K, C, OY, OX, FY, FX]
-  loop_sizes: [1, 2, 32, 32, 5, 4, 2, 2]
+  loop_sizes: [1, 10, 64, 32, 64, 64, 3, 3]
   operand_precision:
     W: 8
     I: 8
-    O: 16
+    O: 8
     O_final: 8
     H : 8
   operand_source:
@@ -19,16 +19,50 @@
 - id: 1 # conv2_1
   operator_type: Conv
   equation: O[b][t][k][oy][ox]+=W[k][c][fy][fx]*I[b][t][c][iy][ix]
-  dimension_relations: [ix=1*ox+1*fx, iy=1*oy+1*fy]
+  dimension_relations: [ix=2*ox+1*fx, iy=2*oy+1*fy]
   loop_dims: [B, T, K, C, OY, OX, FY, FX]
-  loop_sizes: [1, 2, 32, 32, 5, 4, 2, 2]
+  loop_sizes: [1, 10, 64, 64, 32, 32, 3, 3]
   operand_precision:
     W: 8
     I: 8
-    O: 16
+    O: 8
     O_final: 8
     H: 8
   operand_source:
     I: 0
     W: 1
   is_hidden: true
+
+- id: 2 # conv2_1
+  operator_type: Conv
+  equation: O[b][t][k][oy][ox]+=W[k][c][fy][fx]*I[b][t][c][iy][ix]
+  dimension_relations: [ix=2*ox+1*fx, iy=2*oy+1*fy]
+  loop_dims: [B, T, K, C, OY, OX, FY, FX]
+  loop_sizes: [1, 10, 64, 64, 16, 16, 3, 3]
+  operand_precision:
+    W: 8
+    I: 8
+    O: 8
+    O_final: 8
+    H: 8
+  operand_source:
+    I: 1
+    W: 2
+  is_hidden: true
+
+- id: 3 # conv2_1
+  operator_type: Conv
+  equation: O[b][t][k][oy][ox]+=W[k][c][fy][fx]*I[b][t][c][iy][ix]
+  dimension_relations: [ix=2*ox+1*fx, iy=2*oy+1*fy]
+  loop_dims: [B, T, K, C, OY, OX, FY, FX]
+  loop_sizes: [1, 10, 64, 64, 8, 8, 3, 3]
+  operand_precision:
+    W: 8
+    I: 8
+    O: 8
+    O_final: 8
+    H: 8
+  operand_source:
+    I: 2
+    W: 3
+  is_hidden: true  
